--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -30,7 +30,6 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:1.22.0'
     implementation 'com.google.api-client:google-api-client-android:1.22.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
-
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.google.android.gms:play-services-identity:16.0.0'
     implementation('com.google.api-client:google-api-client-android:1.22.0') {
@@ -40,43 +39,81 @@ dependencies {
         exclude group: 'org.apache.httpcomponents'
     }
 
-//    // Google Play services Auth split
-//    implementation 'com.google.android.gms:play-services-auth:+'
-//// Google Api Client library and Android extension
-//    implementation 'com.google.api-client:google-api-client:+'
-//    implementation 'com.google.api-client:google-api-client-android:+'
-//// Change to the API you want to access:
-//// Below is just an example for People REST API access
-//    implementation 'com.google.apis:google-api-services-people:+'
-//
-//
-//    //new stuff
-//    implementation 'com.google.android.gms:play-services-auth:+'
-//    implementation('com.google.apis:google-api-services-gmail:v1-rev44-1.22.0') {
-//        exclude group: 'org.apache.httpcomponents'
-//    }
-//    annotationProcessor 'com.google.auto.value:auto-value:+'
-//
-//    implementation 'com.google.auto.value:auto-value:+'
-//    //16.01
-//    //default gradle deps
-//    implementation fileTree(include: ['*.jar'], dir: 'libs')
-//    //    implementation 'com.android.support:appcompat-v7:28.0.0'
-//    //    //implementation 'com.android.support.constraint:constraint-layout:1.0.1'
-//    //    testImplementation 'junit:junit:4.12'
-//    //    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-//    //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-//    //    implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha3'
-//    implementation 'com.android.support:appcompat-v7:+'
-//    implementation 'com.android.support:recyclerview-v7:+'
-//    implementation 'com.android.support:animated-vector-drawable:+'
-//    implementation 'com.android.support:support-media-compat:+'
-//    implementation 'com.android.support:support-v4:+'
-//    //implementation 'com.android.support.constraint:constraint-layout:1.0.1'
-//    testImplementation 'junit:junit:4.12'
-//    androidTestImplementation 'com.android.support.test:runner:+'
-//    androidTestImplementation 'com.android.support.test.espresso:espresso-core:+'
-//    implementation 'com.android.support.constraint:constraint-layout:+'
-//    implementation 'com.google.api:toolkit:0.0.5'
+    //    // Google Play services Auth split
 
+    //    implementation 'com.google.android.gms:play-services-auth:+'
+
+    //// Google Api Client library and Android extension
+
+    //    implementation 'com.google.api-client:google-api-client:+'
+
+    //    implementation 'com.google.api-client:google-api-client-android:+'
+
+    //// Change to the API you want to access:
+
+    //// Below is just an example for People REST API access
+
+    //    implementation 'com.google.apis:google-api-services-people:+'
+
+    //
+
+    //
+
+    //    //new stuff
+
+    //    implementation 'com.google.android.gms:play-services-auth:+'
+
+    //    implementation('com.google.apis:google-api-services-gmail:v1-rev44-1.22.0') {
+
+    //        exclude group: 'org.apache.httpcomponents'
+
+    //    }
+
+    //    annotationProcessor 'com.google.auto.value:auto-value:+'
+
+    //
+
+    //    implementation 'com.google.auto.value:auto-value:+'
+
+    //    //16.01
+
+    //    //default gradle deps
+
+    //    implementation fileTree(include: ['*.jar'], dir: 'libs')
+
+    //    //    implementation 'com.android.support:appcompat-v7:28.0.0'
+
+    //    //    //implementation 'com.android.support.constraint:constraint-layout:1.0.1'
+
+    //    //    testImplementation 'junit:junit:4.12'
+
+    //    //    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
+    //    //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //    //    implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha3'
+
+    //    implementation 'com.android.support:appcompat-v7:+'
+
+    //    implementation 'com.android.support:recyclerview-v7:+'
+
+    //    implementation 'com.android.support:animated-vector-drawable:+'
+
+    //    implementation 'com.android.support:support-media-compat:+'
+
+    //    implementation 'com.android.support:support-v4:+'
+
+    //    //implementation 'com.android.support.constraint:constraint-layout:1.0.1'
+
+    //    testImplementation 'junit:junit:4.12'
+
+    //    androidTestImplementation 'com.android.support.test:runner:+'
+
+    //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:+'
+
+    //    implementation 'com.android.support.constraint:constraint-layout:+'
+
+    //    implementation 'com.google.api:toolkit:0.0.5'
+    implementation 'org.apache.commons:commons-lang3:3.8.1'
+    implementation 'org.apache.commons:commons-text:1.6'
 }
