--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile){
+            options.compilerArgs<<"-Xlint:unchecked"
+        }
+    }
     repositories {
         google()
         jcenter()
@@ -16,6 +20,7 @@ buildscript {
 }
 
 allprojects {
+
     repositories {
         google()
         maven{
