--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,4 +116,9 @@ dependencies {
     //    implementation 'com.google.api:toolkit:0.0.5'
     implementation 'org.apache.commons:commons-lang3:3.8.1'
     implementation 'org.apache.commons:commons-text:1.6'
+
+    //the fancy button
+    implementation 'br.com.simplepass:loading-button-android:2.1.0'
+    implementation 'com.android.support:design:26.1.0'
+
 }
